--- a/package.json
+++ b/package.json
@@ -4,9 +4,19 @@
   "description": "Frontend for Trainocate Ecommerce",
   "main": "index.js",
   "license": "MIT",
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
   "dependencies": {
+    "@babel/core": "^7.13.8",
+    "@babel/preset-env": "^7.13.9",
+    "babel-loader": "^8.2.2",
+    "bootstrap": "^4.6.0",
     "lodash": "^4.17.21",
     "webpack": "^5.24.3",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
