--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
     "bootstrap": "^4.6.0",
+    "css-loader": "^5.1.1",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "webpack": "^5.24.3",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
