--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.24.3",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "scripts": {
+    "build": "./node_modules/.bin/webpack --mode production",
+    "deploy": "aws s3 sync dist/ s3://trainocate-ecommerce-web-development --acl public-read"
   }
 }
