--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^8.2.2",
     "bootstrap": "^4.6.0",
     "css-loader": "^5.1.1",
+    "dotenv": "^8.2.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
