fetch courses integration

--- a/.env.dist
+++ b/.env.dist
@@ -5,3 +5,4 @@ TRAINOCATE_PAYMENT_ENDPOINT=""
 # Routes
 API_BASE_URL="http://localhost:3000"
 ENDPOINT_ADMIN_SAVE_COURSE="/courses"
+ENDPOINT_ADMIN_COURSES="/courses"
